--- a/src/app/pharm-yarok/pharm-yarok.component.html
+++ b/src/app/pharm-yarok/pharm-yarok.component.html
@@ -146,14 +146,19 @@
     </div>
   </div>
 
-  <!-- <div class="personas">
+  <div class="personas">
     <div class="paragraph-gap-2">
       <span class="title">Personas</span>
       <span>
         Based on my research, I mapped 3 types of users to reflect on them when
         making decisions.
       </span>
-      <div class="personas">
+
+      <div class="personas show-on-mobile">
+        <app-personas [personas]="personas"></app-personas>
+      </div>
+
+      <div class="personas hide-on-mobile">
         <div class="persona">
           <div><img src="../../assets/pharmYarok/person1.svg" /></div>
           <div class="person-info">
@@ -226,7 +231,7 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 
   <div class="sections">
     <div class="paragraph-gap-2">
@@ -272,13 +277,13 @@
   </div>
 
   <div class="problem-solutions">
-    <div class="headers show-mobile-header">
+    <div class="headers show-on-mobile">
       <span class="sub-title">Final design</span>
       <span class="title">Adding products to the cart</span>
     </div>
     <div class="mobile-order">
       <div class="para">
-        <div class="headers hide-mobile-header">
+        <div class="headers hide-on-mobile">
           <span class="sub-title">Final design</span>
           <span class="title">Adding products to the cart</span>
         </div>
@@ -342,12 +347,12 @@
   </div>
 
   <div class="problem-solutions order-tracking">
-    <div class="headers show-mobile-header">
+    <div class="headers show-on-mobile">
       <span class="title">Order tracking</span>
     </div>
     <div class="mobile-order">
       <div class="para">
-        <div class="headers hide-mobile-header">
+        <div class="headers hide-on-mobile">
           <span class="title">Order tracking</span>
         </div>
         <div class="paragraph-gap-3">
