--- a/src/app/pharm-yarok/pharm-yarok.component.scss
+++ b/src/app/pharm-yarok/pharm-yarok.component.scss
@@ -220,14 +220,6 @@
       line-height: 160%;
     }
 
-    .show-mobile-header {
-      display: none;
-    }
-
-    .hide-mobile-header {
-      display: flex;
-    }
-
     .sub-title {
       font-size: 1.25rem;
     }
@@ -396,6 +388,14 @@
       padding: 1.5rem;
     }
 
+    ::ng-deep.dot {
+      background-color: var(--border-color-first) !important;
+    }
+
+    ::ng-deep.selected-dot {
+      background-color: var(--selected-dot-color-py) !important;
+    }
+
     .research {
       .problems {
         .card {
@@ -414,13 +414,13 @@
       padding: 2.5rem 1.5rem;
       gap: 2.5rem;
       width: -webkit-fill-available;
+    }
 
-      ::ng-deep.dot {
-        background-color: var(--border-color-first) !important;
-      }
+    .personas {
+      padding: 0 1.5rem;
 
-      ::ng-deep.selected-dot {
-        background-color: var(--selected-dot-color-py) !important;
+      .personas {
+        padding: 0;
       }
     }
 
@@ -454,14 +454,6 @@
     .problem-solutions {
       flex-direction: column;
       gap: 2.5rem;
-
-      .show-mobile-header {
-        display: flex;
-      }
-
-      .hide-mobile-header {
-        display: none;
-      }
 
       .mobile-order {
         flex-direction: column-reverse;
