--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,19 +23,26 @@
             I am a driven, passionate, and eager designer, with 3 years of
             experience.
           </span>
-          <span>
+          <span class="hide-on-mobile">
             <span class="bold">I currently work for the Israeli Navy</span>
             where I specialize in complex systems <br />
             which is a true passion of mine. I enjoy collaborating with other
             designers <br />
             and developers and learning from them.</span
           >
+          <span class="show-on-mobile">
+            <span class="bold">I currently work for the Israeli Navy</span>
+            where I specialize in complex systems which is a true passion of
+            mine.<br />
+            I enjoy collaborating with other designers and developers and
+            learning from them.</span
+          >
           <span
             >I'm also a 2nd year
             <span class="bold"> psychology student at the Open University.</span
             ><br />
             The knowledge I gain in my studies helps tremendously to understand
-            human <br />
+            human <br class="hide-on-mobile" />
             behavior and its flaws and allows me to create better user
             experiences.</span
           >
