--- a/src/app/image-slider/image-slider.component.html
+++ b/src/app/image-slider/image-slider.component.html
@@ -6,7 +6,7 @@
     } @else {
     <img src="{{ item.path }}" (click)="next()" />
     }
-    <span>{{ item.text }}</span>
+    <span class="text">{{ item.text }}</span>
     <button (click)="prev()">Prev</button>
     } }
   </div>
