--- a/src/app/pharm-yarok/pharm-yarok.component.html
+++ b/src/app/pharm-yarok/pharm-yarok.component.html
@@ -18,7 +18,7 @@
       <span class="title">The challenge</span>
       <span class="text">
         Redesign the app to improve usability, make ordering easier and
-        convenient for future purchases, <br />
+        convenient for future purchases, <br class="hide-on-mobile" />
         to encourage users to purchase on the app.
       </span>
     </div>
@@ -80,7 +80,8 @@
               >What helps decide which cannabis strain to buy?</span
             >
             <span class="answer"
-              >Knowing which cannabis strain is right for a specific <br />
+              >Knowing which cannabis strain is right for a specific
+              <br class="hide-on-mobile" />
               condition, and following the majority's choice.</span
             >
           </span>
@@ -239,7 +240,7 @@
       <span class="text">
         The revamped app simplifies medicinal cannabis ordering by providing
         patients with insightful treatment decisions <br />
-        and facilitating quick, effortless ordering.
+        and facilitates quick, effortless ordering.
       </span>
     </div>
 
@@ -251,8 +252,8 @@
       <span class="text">
         To help users find the strains they're looking for easily, I categorized
         the products according to the most common factors that
-        <br />patients consider when choosing a strain: dose, newness, brand,
-        popularity, and discounted price.
+        <br class="hide-on-mobile" />patients consider when choosing a strain:
+        dose, newness, brand, popularity, and discounted price.
       </span>
     </div>
   </div>
@@ -289,9 +290,7 @@
         </div>
         <div class="paragraph-gap-3">
           <div class="paragraph-gap-2">
-            <span class="problem text-bold"
-              >The problems I addressed were:</span
-            >
+            <span class="problem text-bold">The problems I addressed:</span>
             <span class="para">
               <span class="paragraph-gap-1">
                 <span class="text-bold">Missing cart:</span> Unclear what's
@@ -315,8 +314,9 @@
                 <span class="text-bold">
                   Making POP products more accessible:
                 </span>
-                I added a POP products section to the cart with <br />images and
-                descriptions to boost sales.
+                I added a POP products section to the cart with
+                <br class="hide-on-mobile" />images and descriptions to boost
+                sales.
               </span>
             </span>
           </div>
@@ -357,16 +357,15 @@
         </div>
         <div class="paragraph-gap-3">
           <div class="paragraph-gap-2">
-            <span class="problem text-bold"
-              >The problems I addressed were:</span
-            >
+            <span class="problem text-bold">The problem I addressed:</span>
             <span class="para">
               <span class="paragraph-gap-1">
                 <span class="text-bold"
                   >Lack of delivery info leading to cancellations:</span
                 >Patients would have to contact the pharmacy to get
-                <br />delivery details, or await contact. most people would
-                <br />get tired waiting and purchase someplace else.
+                <br class="hide-on-mobile" />delivery details, or await contact.
+                most people would <br class="hide-on-mobile" />get tired waiting
+                and purchase someplace else.
               </span>
             </span>
           </div>
@@ -377,14 +376,16 @@
                 <span class="text-bold"
                   >Providing clear feedback & setting expectations:</span
                 >
-                After placing an order, the success page helps inform <br />the
-                patient about the timeline of the order.
+                After placing an order, the success page helps inform
+                <br class="hide-on-mobile" />the patient about the timeline of
+                the order.
               </span>
               <span class="paragraph-gap-1">
                 <span class="text-bold"
                   >Allocating space for order tracking:</span
                 >After placing an order, the info, status and ETA will be
-                <br />visible at the top of the search page.
+                <br class="hide-on-mobile" />visible at the top of the search
+                page.
               </span>
             </span>
           </div>
