--- a/src/app/threats/threats.component.html
+++ b/src/app/threats/threats.component.html
@@ -11,7 +11,7 @@
         This project was done as part of an operational command and control
         system used by the Israeli Navy.<br />
         <span class="text-bold">
-          In order to protect classified navy information, some details have
+          In order to protect classified Navy information, some details have
           been altered in this case study.
         </span>
       </span>
@@ -67,11 +67,12 @@
       <div class="paragraph">
         <span class="title">Research</span>
         <span class="text">
-          To understand the navy's users needs, I visited a ship and conducted
-          interviews with each relevant position holder.<br />
+          To understand the Navy's users' needs, <br class="show-on-mobile" />
+          I visited a ship and conducted interviews with each relevant position
+          holder.<br />
           My goals were to understand the surrounding environment of each
           position holder and their JTBD so that I could <br />accommodate their
-          different needs while making good use of the their desk space.
+          different needs while making good use of their desk space.
         </span>
         <span class="questions">Some of the questions I asked were:</span>
         <span class="paragraph-gap-3">
@@ -130,9 +131,7 @@
               <span class="title">Defence Officer</span>
               <img src="../../assets/threats/lieutenant.svg" />
             </span>
-            <span class="content">
-              They manage the entire defence process.
-            </span>
+            <span>They manage the entire defence process.</span>
           </div>
           <span class="paragraph-gap-1">
             <span class="chip-title-blue">needs</span>
@@ -146,7 +145,7 @@
             <span class="chip-title-red">Pain Point</span>
             <span>
               <span class="text-bold">Inconvenient consumption of data:</span>
-              the <br />information is scattered in the map and <br />not
+              <br />The information is scattered in the map and <br />not
               concentrated in 1 place.
             </span>
           </span>
@@ -212,7 +211,7 @@
           <span class="title">The Grouping Panel</span>
         </div>
         <div class="paragraph-gap-3">
-          <span class="problem text-bold">The problems I addressed were:</span>
+          <span class="problem text-bold">The problems I addressed:</span>
           <span class="para">
             <span class="paragraph-gap-1">
               <span class="colored-text">Hard to group from the map:</span>A
@@ -220,8 +219,9 @@
             </span>
             <span class="paragraph-gap-1">
               <span class="colored-text">Manual grouping:</span>This is the main
-              task the controller has to do very quickly, and <br />the current
-              process takes 30 - 50 seconds.
+              task the controller has to do very quickly,
+              <br class="hide-on-mobile" />and the current process takes 30 - 50
+              seconds.
             </span>
           </span>
           <span class="solution text-bold">The solutions:</span>
@@ -229,7 +229,7 @@
             <span class="paragraph-gap-1">
               <span class="colored-text">Minimizing the map:</span>
               Once the side panel opens, the map narrows down so that no
-              <br />
+              <br class="hide-on-mobile" />
               content can be hidden.
             </span>
             <span class="paragraph-gap-1">
@@ -237,13 +237,14 @@
               <ul>
                 <li>
                   <span class="colored-text">Suggestions -</span> They save the
-                  controller time. Grouping <br />from the panel takes 3-10
-                  seconds.
+                  controller time. <br class="hide-on-mobile" />
+                  Grouping from the panel takes 3-10 seconds.
                 </li>
                 <li>
                   <span class="colored-text">Alerts -</span> Same as displayed
-                  in the dashboard, giving the <br />controller access to
-                  everything they need in one place.
+                  in the dashboard, giving the
+                  <br class="hide-on-mobile" />controller access to everything
+                  they need in one place.
                 </li>
               </ul>
             </span>
@@ -266,18 +267,20 @@
           <span class="title">The Dashboard</span>
         </div>
         <div class="paragraph-gap-3">
-          <span class="problem text-bold">The problems I addressed were:</span>
+          <span class="problem text-bold">The problems I addressed:</span>
           <span class="para">
             <span class="paragraph-gap-1">
               <span class="colored-text">Minimal area:</span>The threat list
-              area wasn't large which made users have to <br />constantly scroll
-              to view all the threats on the list.
+              area wasn't large which made users have to
+              <br class="hide-on-mobile" />constantly scroll to view all the
+              threats on the list.
             </span>
             <span class="paragraph-gap-1">
               <span class="colored-text">Missing alerts:</span>The old threat
-              panel showed alerts on top of a threat, and <br />since most of
-              the time they had to scroll to view the entire <br />threat list,
-              incoming alerts were easy to miss.
+              panel showed alerts on top of a threat, and
+              <br class="hide-on-mobile" />since most of the time they had to
+              scroll to view the entire <br class="hide-on-mobile" />threat
+              list, incoming alerts were easy to miss.
             </span>
           </span>
           <span class="solution text-bold">The solutions:</span>
@@ -285,14 +288,15 @@
             <span class="paragraph-gap-1">
               <span class="colored-text">Dashboard:</span>
               I used a separate screen from the main system to display the
-              <br />
+              <br class="hide-on-mobile" />
               dashboard. Now the users can view the map and their data
-              <br />both at the same time.
+              <br class="hide-on-mobile" />both at the same time.
             </span>
             <span class="paragraph-gap-1">
               <span class="colored-text">Alert Area:</span>The dashboard was
-              divided into 4 sections. <br />The right one provides space to
-              alert users, and offer them <br />choices about a given threat.
+              divided into 4 sections. <br class="hide-on-mobile" />The right
+              one provides space to alert users, and offer them
+              <br class="hide-on-mobile" />choices about a given threat.
             </span>
           </span>
         </div>
@@ -324,10 +328,13 @@
     <span class="card">
       <span class="chip-title">Results</span>
       <span class="text"
-        >Overall, the usability testing results were positive, with only one
-        minor usability issue detected: <br />Participants had difficulty
-        distinguishing suggested groups from existing groups. <br />The issue
-        was fixed by providing different colors and visual indicators.</span
+        ><span class="text-bold">
+          Overall, the usability testing results were positive, with only one
+          minor usability issue detected:
+        </span>
+        <br />Participants had difficulty distinguishing suggested groups from
+        existing groups. <br class="hide-on-mobile" />The issue was fixed by
+        providing different colors and visual indicators.</span
       >
     </span>
   </div>
