--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -23,7 +23,7 @@
   --dark-background-second: #373737;
   --dark-blue: #58afff;
   --dark-border: #393939;
-  --dark-red: #ff616a;
+  --dark-red: #ff6a73;
   --dark-blue-background: #2c343c;
   --dark-red-background: #3c2d2e;
   --dark-card-background: #272727;
