--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -41,6 +41,7 @@
 
     .menu {
       width: 100%;
+      height: 100%;
       position: absolute;
       left: 0;
       background: var(--card-background);
