--- a/src/app/pharm-yarok/pharm-yarok.component.scss
+++ b/src/app/pharm-yarok/pharm-yarok.component.scss
@@ -154,13 +154,8 @@
     @extend .section;
     gap: 8.25rem;
 
-    .intro {
-      @extend .paragraph-gap-2;
-      align-self: center;
-
-      .sub-title {
-        font-size: 1.25rem;
-      }
+    .sub-title {
+      font-size: 1.25rem;
     }
   }
 
@@ -222,6 +217,10 @@
 
     .sub-title {
       font-size: 1.25rem;
+    }
+
+    .title {
+      line-height: 130%;
     }
 
     .mobile-order {
@@ -295,6 +294,10 @@
     .para {
       direction: ltr;
     }
+
+    .images {
+      direction: ltr;
+    }
   }
 
   .checkout {
@@ -348,7 +351,7 @@
   }
 
   .overview-img {
-    content: url("../../assets/pharmYarok/overview.png");
+    content: url("../../assets/pharmYarok/py-overview.png");
   }
 
   .sub-title {
@@ -368,6 +371,8 @@
 
     .header {
       .header {
+        height: 100%;
+
         ::ng-deep.link {
           color: var(--text-color);
         }
@@ -424,6 +429,12 @@
       }
     }
 
+    .sections {
+      .sub-title {
+        font-size: 1rem;
+      }
+    }
+
     .wireframe {
       margin-top: 0;
       padding: 0;
@@ -444,7 +455,7 @@
             .content {
               margin: 0.3rem 0 0.5rem 0.3rem;
               border-radius: 0.35rem;
-              width: 6.9rem;
+              width: 7.5rem;
             }
           }
         }
@@ -455,6 +466,10 @@
       flex-direction: column;
       gap: 2.5rem;
 
+      .sub-title {
+        font-size: 1rem;
+      }
+
       .mobile-order {
         flex-direction: column-reverse;
         gap: 2.5rem;
@@ -463,6 +478,10 @@
           .para {
             width: auto;
           }
+        }
+
+        .images {
+          gap: 1.25rem;
         }
       }
     }
@@ -484,6 +503,13 @@
         padding: 2.5rem 1.5rem;
         gap: 1.5rem;
 
+        .scroll-image {
+          .content {
+            display: block;
+            margin: 1rem 0.3rem 2.5rem 0.3rem;
+          }
+        }
+
         div {
           display: flex;
           flex: 1 1 30%;
@@ -497,14 +523,14 @@
 
       .scroll-image {
         .content {
-          margin: 1rem 0.3rem 2rem 0.3rem;
-          border-radius: 0.35rem;
+          margin: 1rem 0.3rem 2.3rem 0.3rem !important;
+          border-radius: 0.35rem !important;
         }
       }
     }
 
     .overview-img {
-      content: url("../../assets/pharmYarok/overview-mobile.png");
+      content: url("../../assets/pharmYarok/py-overview-mobile.png");
     }
   }
 }
