--- a/src/app/threats/threats.component.html
+++ b/src/app/threats/threats.component.html
@@ -97,7 +97,10 @@
       </div>
 
       <div class="personas show-on-mobile">
-        <app-personas [personas]="personas"></app-personas>
+        <app-personas
+          class="personas-slider"
+          [personas]="personas"
+        ></app-personas>
       </div>
 
       <div class="personas hide-on-mobile">
