--- a/src/app/threats/personas/personas.component.html
+++ b/src/app/threats/personas/personas.component.html
@@ -1,34 +1,27 @@
 <div class="personas">
-  @for (person of personas; track person.header; let index = $index) { @if(index
-  === currentIndex) {
-  <div class="persona">
-    <div class="paragraph-gap-1">
-      <span class="header">
-        <span class="title">{{ person.header }}</span>
-        <img src="{{ person.image }}" />
-      </span>
-      <span>
-        {{ person.info }}
-      </span>
-    </div>
-    <span class="paragraph-gap-1">
-      <span class="chip-title-blue">needs</span>
-      <span class="content">{{ person.needs }}</span>
-    </span>
-    <span class="paragraph-gap-1">
-      <span class="chip-title-red">Pain Point</span>
-      {{ person.painPoint }}
-    </span>
-  </div>
-  } }
-
-  <div class="dots">
-    @for (item of personas; track item.header; let index = $index) {
-    <span
-      (click)="goToStory(index)"
-      class="dot"
-      [class.selected-dot]="currentIndex === index"
-    ></span>
+  <swiper-container pagination="true" pagination-clickable="true">
+    @for (person of personas; track person.header; let index = $index) {
+    <swiper-slide>
+      <div class="persona">
+        <div class="paragraph-gap-1">
+          <span class="header">
+            <span class="title">{{ person.header }}</span>
+            <img src="{{ person.image }}" />
+          </span>
+          <span>
+            {{ person.info }}
+          </span>
+        </div>
+        <span class="paragraph-gap-1">
+          <span class="chip-title-blue">needs</span>
+          <span class="content">{{ person.needs }}</span>
+        </span>
+        <span class="paragraph-gap-1">
+          <span class="chip-title-red">Pain Point</span>
+          {{ person.painPoint }}
+        </span>
+      </div>
+    </swiper-slide>
     }
-  </div>
+  </swiper-container>
 </div>
