--- a/src/app/threats/personas/personas.component.scss
+++ b/src/app/threats/personas/personas.component.scss
@@ -5,58 +5,68 @@
 
   align-items: center;
 
-  .persona {
-    @extend .paragraph-gap-3;
+  swiper-container {
+    width: 100%;
 
-    background-color: var(--dark-card-background);
-    border: 1px var(--dark-border) solid;
-    border-radius: 0.5rem;
-    padding: 1.5rem;
-
-    * {
-      line-height: 160%;
-    }
-
-    .header {
+    &::part(pagination) {
+      position: static;
+      padding-top: 2.5rem;
       display: flex;
-      flex-direction: row;
-      gap: 1rem;
-
-      .title {
-        font-size: 1.25rem;
-        font-weight: 600;
-      }
+      justify-content: center;
+      gap: 0.5rem;
     }
 
-    .content::after {
-      content: "";
-      display: flex;
-      height: 1.25rem;
-      visibility: visible;
-    }
-
-    .chip-title-blue {
-      @include chip(--dark-blue);
-    }
-
-    .chip-title-red {
-      @include chip(--dark-red);
-    }
-  }
-
-  .dots {
-    display: flex;
-    gap: 0.5rem;
-
-    .dot {
-      width: 0.5rem;
-      height: 0.5rem;
-      border-radius: 100%;
+    &::part(bullet) {
+      margin: 0;
+      opacity: 1;
       background-color: var(--dot-color);
     }
 
-    .selected-dot {
+    &::part(bullet-active) {
+      margin: 0;
       background-color: var(--selected-dot-color);
+    }
+
+    swiper-slide {
+      .persona {
+        @extend .paragraph-gap-3;
+
+        background-color: var(--dark-card-background);
+        border: 1px var(--dark-border) solid;
+        border-radius: 0.5rem;
+        padding: 1.5rem;
+        height: 25.625rem;
+
+        * {
+          line-height: 160%;
+        }
+
+        .header {
+          display: flex;
+          flex-direction: row;
+          gap: 1rem;
+
+          .title {
+            font-size: 1.25rem;
+            font-weight: 600;
+          }
+        }
+
+        .content::after {
+          content: "";
+          display: flex;
+          height: 1.25rem;
+          visibility: visible;
+        }
+
+        .chip-title-blue {
+          @include chip(--dark-blue);
+        }
+
+        .chip-title-red {
+          @include chip(--dark-red);
+        }
+      }
     }
   }
 }
