--- a/src/app/pharm-yarok/pharm-yarok.component.html
+++ b/src/app/pharm-yarok/pharm-yarok.component.html
@@ -329,8 +329,9 @@
     </div>
   </div>
 
+  <span class="title checkout-title hide-on-mobile">Checkout process</span>
   <div class="checkout">
-    <span class="title">Checkout process</span>
+    <span class="title show-on-mobile">Checkout process</span>
     <div class="images">
       <div><img src="../../assets/pharmYarok/checkout1.svg" /></div>
       <div><img src="../../assets/pharmYarok/checkout2.svg" /></div>
@@ -405,7 +406,7 @@
     </div>
   </div>
 
-  <img class="imag overview-img" />
+  <img class="overview-img" />
 </div>
 
 <app-back-to-top></app-back-to-top>
