--- a/src/app/pharm-yarok/pharm-yarok.component.scss
+++ b/src/app/pharm-yarok/pharm-yarok.component.scss
@@ -1,13 +1,20 @@
 @import "../../styles.scss";
 
 .pharm-yarok {
-  display: flex;
-  flex-direction: column;
-  gap: 8.25rem;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  grid-row-gap: 8.25rem;
+
+  > div {
+    grid-column: 2;
+    width: auto;
+  }
 
   .header {
     @extend .paragraph-gap-0;
     @extend .full-width;
+
+    grid-column: span 3;
 
     .header {
       position: absolute;
@@ -33,6 +40,7 @@
   .user-story {
     @extend .section;
 
+    grid-column: span 3;
     flex-direction: row;
     gap: 1.5rem;
     padding: 4.875rem 10rem;
@@ -162,6 +170,7 @@
   .wireframe {
     @extend .section;
 
+    grid-column: span 3;
     width: 100%;
     margin-top: -6.75rem;
 
@@ -300,18 +309,16 @@
     }
   }
 
+  .checkout-title {
+    grid-column: 2;
+  }
+
   .checkout {
     @extend .section;
 
+    grid-column: span 3;
     gap: 1.5rem;
-
-    .title::before {
-      content: "";
-      display: inline-block;
-      width: 22%;
-      max-width: 27rem;
-      visibility: visible;
-    }
+    margin-top: -6.75rem;
 
     .images {
       display: flex;
@@ -351,6 +358,8 @@
   }
 
   .overview-img {
+    grid-column: span 3;
+    width: 100%;
     content: url("../../assets/pharmYarok/py-overview.png");
   }
 
@@ -372,6 +381,8 @@
   }
 
   .pharm-yarok {
+    display: flex;
+    flex-direction: column;
     gap: 4rem;
 
     .header {
@@ -486,6 +497,7 @@
 
     .checkout {
       padding: 0;
+      margin-top: 0;
 
       .title {
         text-align: left;
