--- a/src/app/threats/threats.component.scss
+++ b/src/app/threats/threats.component.scss
@@ -1,9 +1,15 @@
 @import "../../styles.scss";
 
 .threats {
-  display: flex;
-  flex-direction: column;
-  gap: 8.25rem;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  grid-row-gap: 8.25rem;
+
+  > div {
+    grid-column: 2;
+    width: auto;
+  }
+
   background-color: var(--dark-background-first);
   color: var(--dark-text-color);
 
@@ -18,6 +24,8 @@
   .header {
     @extend .paragraph-gap-0;
     @extend .full-width;
+
+    grid-column: span 3;
 
     .header {
       position: absolute;
@@ -43,6 +51,7 @@
     @extend .section;
     @extend .paragraph-gap-0;
 
+    grid-column: span 3;
     padding: 5rem 0;
     background: var(--dark-background-second);
     align-items: center;
@@ -147,6 +156,7 @@
   .wireframe {
     @extend .section;
 
+    grid-column: span 3;
     gap: 5rem;
     background-color: var(--dark-background-second);
     padding: 5rem 0;
@@ -199,6 +209,7 @@
   .problem-solutions {
     @extend .section;
 
+    grid-column: span 3;
     flex-direction: row;
     justify-content: center;
     padding-left: 0;
@@ -302,6 +313,8 @@
   }
 
   .overview-img {
+    grid-column: span 3;
+    width: 100%;
     content: url("../../assets/threats/overview.png");
   }
 }
@@ -313,6 +326,8 @@
   }
 
   .threats {
+    display: flex;
+    flex-direction: column;
     gap: 4rem;
 
     ::ng-deep.link {
