Fix Hadas review

--- a/src/app/explore-projects/explore-projects.component.html
+++ b/src/app/explore-projects/explore-projects.component.html
@@ -6,9 +6,9 @@
   <div class="paragraph-gap-3">
     <span class="sub-title">Explore Other Projects</span>
     <div class="navigation">
-      <button class="navigate" (click)="goTo(firstProject)">
+      <!-- <button class="navigate" (click)="goTo(firstProject)">
         {{ firstProject | projectName }}
-      </button>
+      </button> -->
       <button class="navigate" (click)="goTo(secondProject)">
         {{ secondProject | projectName }}
       </button>
