--- a/src/app/pharm-yarok/personas/personas.component.scss
+++ b/src/app/pharm-yarok/personas/personas.component.scss
@@ -22,7 +22,7 @@
 
         border: 1px var(--border-color-second) solid;
         border-radius: 0.5rem;
-        height: 31.5rem;
+        min-height: 31.5rem;
 
         img {
           width: 100%;
