--- a/src/app/pharm-yarok/pharm-yarok.component.html
+++ b/src/app/pharm-yarok/pharm-yarok.component.html
@@ -79,11 +79,9 @@
             <span class="text-bold"
               >What helps decide which cannabis strain to buy?</span
             >
-            <span class="answer"
-              >Knowing which cannabis strain is right for a specific
-              <br class="hide-on-mobile" />
-              condition, and following the majority's choice.</span
-            >
+            Knowing which cannabis strain is right for a specific
+            <br class="hide-on-mobile" />
+            condition, and following the majority's choice.
           </span>
         </span>
         <span class="card">
@@ -93,14 +91,15 @@
               >What difficulties have you experienced trying to buy
               cannabis?</span
             >
-            <span class="answer"
-              ><span class="text-bold">“It's hard to make a decision”</span
-              ><br />
-              The pharmacy doesn't provide enough info on flavours, effects,<br />
-              images, or reviews, making it impossible to make an informed<br />
-              decision. You're left guessing what to get.</span
-            >
-          </span>
+            <span class="text-bold">“It's hard to make a decision”</span>
+            The pharmacy doesn't provide enough info on flavours, effects,<br
+              class="hide-on-mobile"
+            />
+            images, or reviews, making it impossible to make an informed<br
+              class="hide-on-mobile"
+            />
+            decision. You're left guessing what to get.</span
+          >
         </span>
       </div>
       <span class="card">
