--- a/src/app/threats/threats.component.html
+++ b/src/app/threats/threats.component.html
@@ -148,8 +148,8 @@
             <span class="chip-title-red">Pain Point</span>
             <span>
               <span class="text-bold">Inconvenient consumption of data:</span>
-              <br />The information is scattered in the map and <br />not
-              concentrated in 1 place.
+              <br />The information is scattered in the map and not concentrated
+              in 1 place.
             </span>
           </span>
         </div>
