--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -57,30 +57,39 @@
         padding-right: 1.5rem;
       }
 
-      .link {
-        font-size: 1rem;
-        font-weight: 500;
-        line-height: 160%;
-        padding: 1rem 1.5rem;
-      }
+      .menu-position {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        align-items: center;
+        position: absolute;
+        top: 20%;
 
-      .selected-link {
-        font-weight: 700;
-      }
+        .link {
+          font-size: 1.125rem;
+          font-weight: 500;
+          line-height: 160%;
+          padding: 1rem 1.5rem;
+        }
 
-      .contact {
-        border: 1px solid var(--border-color-first);
-        border-radius: 0.5rem;
-        line-height: normal;
+        .selected-link {
+          font-weight: 700;
+        }
 
-        ::ng-deep.footer {
-          gap: 2rem;
-          padding: 1.5rem;
-          border-top: none;
-          justify-content: left;
+        .contact {
+          border: 1px solid var(--border-color-first);
+          border-radius: 0.5rem;
+          line-height: normal;
 
-          .link {
-            font-size: 0.875rem;
+          ::ng-deep.footer {
+            gap: 2rem;
+            padding: 1.5rem;
+            border-top: none;
+            justify-content: left;
+
+            .link {
+              font-size: 0.875rem;
+            }
           }
         }
       }
