--- a/src/app/back-to-top/back-to-top.component.scss
+++ b/src/app/back-to-top/back-to-top.component.scss
@@ -1,10 +1,9 @@
 @import "../../styles.scss";
 
 .back-to-top {
-  visibility: hidden;
   cursor: pointer;
   gap: 0.5rem;
-  display: flex;
+  display: none;
   padding: 0.5rem;
   justify-content: center;
   align-self: center;
@@ -19,6 +18,6 @@
 
 @media (max-width: 600px) {
   .back-to-top {
-    visibility: visible;
+    display: flex;
   }
 }
