--- a/src/app/threats/threats.component.html
+++ b/src/app/threats/threats.component.html
@@ -342,7 +342,24 @@
     </span>
   </div>
 
-  <img class="overview-img" />
+  <div class="overview-img">
+    <div class="overview-column">
+      <img src="../../assets/threats/overview/overview1.png" />
+      <img src="../../assets/threats/overview/overview2.svg" />
+    </div>
+    <div class="overview-column">
+      <img src="../../assets/threats/overview/overview3.svg" />
+      <img src="../../assets/threats/overview/overview4.svg" />
+    </div>
+    <div class="overview-column hide-on-mobile">
+      <img src="../../assets/threats/overview/overview5.svg" />
+      <img src="../../assets/threats/overview/overview6.svg" />
+    </div>
+    <div class="overview-column hide-on-mobile">
+      <img src="../../assets/threats/overview/overview7.png" />
+      <img src="../../assets/threats/overview/overview8.svg" />
+    </div>
+  </div>
 </div>
 
 <app-back-to-top></app-back-to-top>
