--- a/src/app/threats/threats.component.scss
+++ b/src/app/threats/threats.component.scss
@@ -311,9 +311,17 @@
   }
 
   .overview-img {
+    display: flex;
+    gap: 2rem;
     grid-column: span 3;
-    width: 100%;
-    content: url("../../assets/threats/overview.png");
+    justify-content: center;
+    background-color: var(--dark-background-second);
+
+    .overview-column {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+    }
   }
 }
 
@@ -441,7 +449,13 @@
     }
 
     .overview-img {
-      content: url("../../assets/threats/overview-mobile.png");
+      gap: 1rem;
+      padding: 0 1.5rem;
+
+      .overview-column {
+        gap: 1rem;
+        min-width: 0;
+      }
     }
   }
 }
