--- a/src/app/pharm-yarok/pharm-yarok.component.html
+++ b/src/app/pharm-yarok/pharm-yarok.component.html
@@ -1,3 +1,4 @@
+@defer {
 <div class="pharm-yarok">
   <div class="header">
     <app-header class="header"></app-header>
@@ -415,3 +416,6 @@
 ></app-explore-projects>
 <app-footer></app-footer>
 <app-scroll-to-top></app-scroll-to-top>
+} @placeholder {
+<app-loading></app-loading>
+}
