--- a/src/app/threats/threats.component.html
+++ b/src/app/threats/threats.component.html
@@ -1,3 +1,4 @@
+@defer {
 <div class="threats">
   <div class="header">
     <app-header class="header"></app-header>
@@ -369,3 +370,6 @@
 ></app-explore-projects>
 <app-footer></app-footer>
 <app-scroll-to-top></app-scroll-to-top>
+} @placeholder {
+<app-loading></app-loading>
+}
