--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,14 @@
-<div class="home">
+@defer {
+<app-loading></app-loading>
+
+<!-- <div class="home">
   <div class="mobile-padding">
     <app-header [selectedLink]="'home'" class="full-width"></app-header>
     <div class="hadas">
       <img class="photo" src="../../assets/hadas.svg" />
       <div class="intro">
         <span class="header">Hi, I'm Hadas</span>
+
         <span class="sub-title">Product Designer</span>
         <span class="sentence"
           >I design systems that make a difference for the Israeli Navy</span
@@ -74,8 +78,11 @@
 
   <div class="full-width paragraph-gap-0">
     <app-back-to-top></app-back-to-top>
-    <app-footer></app-footer>
+    <app-footer #footer></app-footer>
   </div>
 </div>
 
-<app-scroll-to-top></app-scroll-to-top>
+<app-scroll-to-top></app-scroll-to-top> -->
+} @placeholder {
+<app-loading></app-loading>
+}
