--- a/src/font.scss
+++ b/src/font.scss
@@ -1,4 +1,4 @@
 @font-face {
-  font-family: Inter;
-  src: url("./assets/font/Inter-Regular.ttf");
+  font-family: Inter-Medium;
+  src: url("./assets/font/Inter-Medium.ttf") format("truetype");
 }
