--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,5 @@
 @defer {
-<app-loading></app-loading>
-
-<!-- <div class="home">
+<div class="home">
   <div class="mobile-padding">
     <app-header [selectedLink]="'home'" class="full-width"></app-header>
     <div class="hadas">
@@ -82,7 +80,7 @@
   </div>
 </div>
 
-<app-scroll-to-top></app-scroll-to-top> -->
+<app-scroll-to-top></app-scroll-to-top>
 } @placeholder {
 <app-loading></app-loading>
 }
